# ENSTA-AI-Project-Group11-2025-2026

./: README.md
AIUTA-VLM-R1-main/: .gitignore  (+1 more)
AIUTA-VLM-R1-main/ai_project/aiuta_vlmr1_project/: eval_entropy_sweep.py  eval_optimized_configs.py  eval_with_coin_formula.py  idkvqa_gt_coin_format.json  patch.sh  pyproject.toml  requirements.txt
AIUTA-VLM-R1-main/ai_project/aiuta_vlmr1_project/aiuta_vlmr1/: __init__.py  config.py
AIUTA-VLM-R1-main/ai_project/aiuta_vlmr1_project/configs/: idkvqa_eval.yaml  idkvqa_eval_qwen_base.yaml  two_pass.yaml  vlmr1_coin.yaml  vlmr1_coin_01.yaml  vlmr1_coin_02.yaml  vlmr1_coin_03.yaml  vlmr1_coin_05.yaml
AIUTA-VLM-R1-main/ai_project/aiuta_vlmr1_project/results/: global_kg_17207.json  global_kg_17208.json
AIUTA-VLM-R1-main/ai_project/aiuta_vlmr1_project/scripts/: plot_fair_table.py
AIUTA-VLM-R1-main/ai_project/aiuta_vlmr1_project/slurm/: run_build_kg.sbatch  run_coin_bench.sbatch  run_coin_offline.sbatch  run_coin_vlmr1.sbatch  run_idkvqa.sbatch  run_idkvqa_ab_compare.sbatch  run_kg_benchmark.sbatch  run_offline_v2.sbatch
AIUTA-VLM-R1-main/ai_project/aiuta_vlmr1_project/tests/: test_coin_bench_runner.py  test_coin_metrics.py  test_commonsense_priors.py  test_entropy_coin_agent.py  test_episode_runner_modes.py  test_global_kg.py  test_idkvqa_benchmark.py  test_kg_dedup_and_trigger.py  test_knowledge_graph.py  test_model_loader.py  test_output_parser.py  test_patch_annotator_answers.py  test_pipeline.py  test_pipeline_ask_and_step.py  test_target_facts_and_matcher.py  test_two_pass_questioner.py  test_uncertainty_threshold.py
(+149 files in other folders)
